syntax = "proto3";

package servicios;
option go_package = "/serviciosStreaming";

service AudioService {
  // Streaming de canci√≥n
  rpc enviarCancionMedianteStream(peticionDTO) returns (stream fragmentoCancion);
}

message peticionDTO {
  int32 id = 1;
  string titulo = 2;
  string artista = 3;
  string album = 4;
  int32 anio = 5;
  string duracion = 6;
  string genero = 7;
  string idioma = 8;
  int32 idUsuario = 9;
}

message fragmentoCancion {
  bytes data = 1;
}