package capacontroladores

import (
	"bytes"
	"encoding/json"
	"fmt"
	"log"
	"net/http"
	"time"

	capafachadaservices "servidor.local/grpc-servidorstream/capaFachadaServices"
	pb "servidor.local/grpc-servidorstream/serviciosStreaming"
)

// ControladorServidor implementa el servicio de streaming de audio
type ControladorServidor struct {
	pb.UnimplementedAudioServiceServer
}

// Reproduccion representa una reproducci√≥n para enviar al servidor
type Reproduccion struct {
	IDUsuario int    `json:"idUsuario"`
	IDCancion int    `json:"idCancion"`
	Titulo    string `json:"titulo"`
	Artista   string `json:"artista"`
	Genero    string `json:"genero"`
	Idioma    string `json:"idioma"`
}

// Implementaci√≥n del procedimiento remoto
func (s *ControladorServidor) EnviarCancionMedianteStream(req *pb.PeticionDTO, stream pb.AudioService_EnviarCancionMedianteStreamServer) error {
	// Registrar reproducci√≥n antes de iniciar el streaming
	err := registrarReproduccion(req)
	if err != nil {
		log.Printf("‚ö†Ô∏è Error registrando reproducci√≥n: %v", err)
		// No fallamos el streaming si falla el registro
	}

	// Iniciar streaming de audio
	return capafachadaservices.StreamAudioFile(
		req.Titulo,
		// funci√≥n para enviar fragmento al cliente
		func(data []byte) error {
			return stream.Send(&pb.FragmentoCancion{Data: data})
		})
}

// registrarReproduccion env√≠a la informaci√≥n de la reproducci√≥n al ServidorDeReproducciones
func registrarReproduccion(req *pb.PeticionDTO) error {
	log.Printf("üìù Registrando reproducci√≥n: Usuario=%d, Canci√≥n=%d (%s)",
		req.IdUsuario, req.Id, req.Titulo)

	// Crear estructura de reproducci√≥n
	reproduccion := Reproduccion{
		IDUsuario: int(req.IdUsuario),
		IDCancion: int(req.Id),
		Titulo:    req.Titulo,
		Artista:   req.Artista,
		Genero:    req.Genero,
		Idioma:    req.Idioma,
	}

	// Serializar a JSON
	jsonData, err := json.Marshal(reproduccion)
	if err != nil {
		return fmt.Errorf("error serializando reproducci√≥n: %w", err)
	}

	// Crear petici√≥n HTTP POST
	url := "http://localhost:3000/reproducciones"
	httpReq, err := http.NewRequest("POST", url, bytes.NewBuffer(jsonData))
	if err != nil {
		return fmt.Errorf("error creando petici√≥n HTTP: %w", err)
	}

	httpReq.Header.Set("Content-Type", "application/json")

	// Enviar petici√≥n con timeout
	client := &http.Client{
		Timeout: 5 * time.Second,
	}

	resp, err := client.Do(httpReq)
	if err != nil {
		return fmt.Errorf("error enviando petici√≥n: %w", err)
	}
	defer resp.Body.Close()

	// Verificar respuesta
	if resp.StatusCode != http.StatusCreated {
		return fmt.Errorf("servidor respondi√≥ con c√≥digo %d", resp.StatusCode)
	}

	log.Printf("‚úÖ Reproducci√≥n registrada exitosamente en ServidorDeReproducciones")
	return nil
}
